Viewport: Texture limit size generates artifacts during painting #111532

Closed
opened 2023-08-25 18:29:25 +02:00 by Shady Hamza · 14 comments

System Information
Operating system: Windows-10-10.0.22621-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 536.99

Blender Version
Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-08-21 22:52, hash: d45f47a809dd
Worked: (newest version of Blender that worked as expected)

Short description of error
When limit size is lesser than the actual image size, this will result in artifacts at paint region.

Exact steps for others to reproduce the error

  • Open attached file
  • Change Texture limit size to 2k or less (Edit > Preferences > Viewport > Textures > Limit size
  • Paint the plane.
**System Information** Operating system: Windows-10-10.0.22621-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 536.99 **Blender Version** Broken: version: 4.0.0 Alpha, branch: main, commit date: 2023-08-21 22:52, hash: `d45f47a809dd` Worked: (newest version of Blender that worked as expected) **Short description of error** When limit size is lesser than the actual image size, this will result in artifacts at paint region. **Exact steps for others to reproduce the error** - Open attached file - Change Texture limit size to 2k or less (`Edit > Preferences > Viewport > Textures > Limit size` - Paint the plane.
Shady Hamza added the
Type
Report
Priority
Normal
Status
Needs Triage
labels 2023-08-25 18:29:26 +02:00
Author
No description provided.

I can't reproduce this from default cube / via attached example file in today 4.0.

I can't reproduce this from default cube / via attached example file in today 4.0.
Author

sorry what default curve?
latest built same issue here

sorry what default curve? latest built same issue here
Author

did you paint in plane?

did you paint in plane?
Member

Hi, unable to replicate either.
Could you try factory settings just to ensure interference of add-on?
Could it be due to the workbench-next (85b02b893a6f51c14128deb7f3193a6c41558394)? Do you observe this problem in other shading modes?

Hi, unable to replicate either. Could you try factory settings just to ensure interference of add-on? Could it be due to the workbench-next (`85b02b893a6f51c14128deb7f3193a6c41558394`)? Do you observe this problem in other shading modes?
Pratik Borhade added
Status
Needs Information from User
and removed
Status
Needs Triage
labels 2023-08-28 05:16:35 +02:00
Author

Yes Factory Solved It, Would test the addons and see what caused it, Thank you

Yes Factory Solved It, Would test the addons and see what caused it, Thank you
Author

found the reason! you need to limit texture size in properties to 2k or less

found the reason! you need to limit texture size in properties to 2k or less
Author

then the artifact appears

then the artifact appears
Member

Thanks. Can confirm now.

Thanks. Can confirm now.
Pratik Borhade changed title from Texture Painting Artifacts to Viewport: Texture limit size generates artifacts during painting 2023-08-28 07:46:21 +02:00
Pratik Borhade added the
Module
EEVEE & Viewport
label 2023-08-28 07:46:40 +02:00
Pratik Borhade added
Status
Confirmed
and removed
Status
Needs Information from User
labels 2023-08-28 07:48:46 +02:00
Member

@Jeroen-Bakker , can you check?

@Jeroen-Bakker , can you check?
Member

I don't have an OS that can display mkv videos, would be helpfull to upload a png displaying the artifact.

I don't have an OS that can display mkv videos, would be helpfull to upload a png displaying the artifact.
Member

image

![image](/attachments/b212e675-db03-4bec-a49e-abcbc457ef0f)
934 KiB
Member

Ok, thanks, will try to bisect as this GPU should not be having these kind of limitations....

Ok, thanks, will try to bisect as this GPU should not be having these kind of limitations....
Member

Ok reproducable on metal as well.
Reason is still unclear as I have been able to reproduce the issue on 3.4, 3.5 and 3.6 as well. Think it is related to the type of texture. Issue points to blender..

Ok reproducable on metal as well. Reason is still unclear as I have been able to reproduce the issue on 3.4, 3.5 and 3.6 as well. Think it is related to the type of texture. Issue points to blender..
Jeroen Bakker added this to the EEVEE & Viewport project 2023-08-28 09:32:37 +02:00
Jeroen Bakker self-assigned this 2023-08-28 11:21:40 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-09-25 12:46:29 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#111532
No description provided.