Fix #111532: Partial Update Byte Data Texture with Scaling Broken

When texture painting on a Non-color byte texture with Texture limit active
(or the texture didn't fit on the GPU) the data for partial updating of a GPU
texture was incorrect.

`gpu_texture_update_scaled` expects an input buffer clipped to
the bounds of the input area that needs to be updated. In case for Byte
textures with Non Color colorspace  it received the unmodified input
buffer, resulting in incorrect data to be uploaded to the GPU texture.

This PR fixes this by selecting the non-optimized branch when the
texture is a Byte buffer with Data color space and scaling should
happen.

Pull Request: https://projects.blender.org/blender/blender/pulls/112834